# d20

./: LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  pythonpublish.yml
d20/: __init__.py  dice.py  diceast.py  expression.py  rand.py
docs/: ast.rst  conf.py  expression.rst  requirements.txt
tests/: conftest.py
